# snowflake-mcp-server

./: .env.browser.example  .env.example  .env.private_key.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONFIGURATION_GUIDE.md  MIGRATION_GUIDE.md  ecosystem.config.js  pyproject.toml  todo.md
.claude/: settings.local.json
.github/workflows/: publish.yml
deploy/: DEPLOYMENT_README.md  install-systemd.sh
deploy/docker/: Dockerfile  docker-compose.yml
deploy/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  rbac.yaml  secret.yaml  service.yaml
deploy/monitoring/: prometheus.yml
deploy/systemd/: snowflake-mcp-http.service  snowflake-mcp-stdio.service
docs/: BACKUP_RECOVERY.md  CAPACITY_PLANNING.md  OPERATIONS_RUNBOOK.md  PHASE2_COMPLETION_SUMMARY.md  SCALING_GUIDE.md  break_down_phases.py
phase-breakdown/phase1-async-operations-details/: phase1-async-operations-details-impl-2-cursor-management.md  phase1-async-operations-details-impl-3-connection-handling.md  phase1-async-operations-details-impl-4-error-handling.md
phase-breakdown/phase1-request-isolation-details/: phase1-request-isolation-details-impl-2-connection-isolation.md
scripts/: start-daemon.sh  stop-daemon.sh  test_concurrent_mcp_simulation.py  test_isolation_performance.py  validate_async_performance.py  validate_request_tracking.py  validate_transaction_boundaries.py
snowflake_mcp_server/: config.py  main.py
tests/: test_async_integration.py  test_chaos_engineering.py  test_load_testing.py  test_multi_client.py  test_request_isolation.py  test_snowflake_conn.py
(+81 files in other folders)
